# nmxptool

./: AUTHORS  BUGS  ChangeLog  DoxyfileLib  HISTORY  Makefile.am  README  README.md  TODO  bootstrap  configure.ac  configure.in  makefile.sol  readme.md
earthworm/: makefile.ux  makefile.ux.nognu  nmxptool.d  nmxptool.desc  nmxptool_cmd.html  nmxptool_ovr.html
include/: nmxp.h  nmxp_base.h  nmxp_chan.h  nmxp_crc32.h  nmxp_data.h  nmxp_log.h  nmxp_memory.h  nmxp_win.h
lib/: Makefile.am  nmxp.c  nmxp_base.c  nmxp_chan.c  nmxp_crc32.c  nmxp_data.c  nmxp_log.c  nmxp_memory.c  nmxp_win.c
no_dist/: create_distribution_nmxptool.sh
no_dist/nanometrics_naqs_and_data.graffle/: data.plist  image3.tiff
no_dist/paper/: nmxptool.lyx  references.bib
no_dist/rapporto_tecnico_ingv/: rapporto_tecnico_ingv_nmxp.doc  rapporto_tecnico_ingv_nmxp.txt
no_dist/scripts/: SVNAUTHORS  UFILE  create_distribution_nmxptool.sh  create_ew_sources.sh  make_dist_bin.sh  nmxp_cvs2cl.sh  nmxp_sp_update_channel_acquisition.sh  nmxp_svn2cl.sh
scripts/: nmxp_sds.conf  nmxp_sds.sh  nmxp_sds_check.sh  nmxp_sds_mgr.sh  nmxp_sds_station_list.conf  nmxpdod.sh  nmxptool_filelist.sh
seiscomp3_templates/nmxp/: seedlink_plugin.tpl
seiscomp_templates/135_nmxptool/: key  seedlink_plugin.tpl
seiscomp_templates/136_nmxptool_dod/: seedlink_plugin.tpl
src/: Makefile.am  nmxptool.c  nmxptool_chanseq.c  nmxptool_chanseq.h  nmxptool_ew.c  nmxptool_ew.h  nmxptool_getoptlong.c  nmxptool_getoptlong.h  nmxptool_listen.c  nmxptool_sigcondition.h
trunk/: HISTORY  Makefile.am  README  bootstrap  configure.in
trunk/earthworm/: nmxptool_cmd.html
trunk/include/: nmxp.h  nmxp_crc32.h  nmxp_data.h  nmxp_log.h  nmxp_win.h
trunk/lib/: nmxp_chan.c  nmxp_crc32.c  nmxp_log.c
trunk/no_dist/nanometrics_naqs_and_data.graffle/: data.plist
trunk/no_dist/scripts/: GLOBALFLAGS  SVNAUTHORS  UFILE  nmxp_svn2cl.sh
trunk/scripts/: nmxp_sds.conf  nmxp_sds.sh  nmxp_sds_check.sh  nmxp_sds_check_all.sh  nmxp_sds_station_list.conf  nmxp_stationlist.sh
trunk/src/: Makefile.am  nmxptool.c  nmxptool_chanseq.h  nmxptool_ew.c  nmxptool_listen.c  nmxptool_sigcondition.c
